<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.tobedefined.ntbcvariantbox</groupId>
    <artifactId>ntbcvariantbox</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>ntbcvariantbox-storage</module>
    </modules>

    <properties>
        <ntbcvariantbox.version>1.0</ntbcvariantbox.version>
        <opencga.version>1.0.0-rc3</opencga.version>
        <java.version>1.8</java.version>
        <biodata.version>0.9.0-SNAPSHOT</biodata.version>
        <cellbase.version>4.5.0-rc-SNAPSHOT</cellbase.version>
        <java-common-libs.version>3.4.0-SNAPSHOT</java-common-libs.version>
        <hpg-bigdata.version>1.0.0-beta-SNAPSHOT</hpg-bigdata.version>
        <jackson.version>2.6.6</jackson.version>
        <jersey.version>2.23</jersey.version>
        <hadoop.version>2.7.1</hadoop.version>
        <hbase.version>1.1.2.2.5.0.0-1245</hbase.version>
        <!--<hbase.version>1.0.0</hbase.version>&lt;!&ndash; -cdh5.7.0 &ndash;&gt;-->
        <!--<phoenix.version>4.7.0-HBase-1.1</phoenix.version>-->
        <phoenix.version>4.7.0.2.5.0.0-1245</phoenix.version>
        <avro.version>1.7.7</avro.version>
        <google.protobuf>3.1.0</google.protobuf> <!--DO NOT UPGRADE! HBase may not work with a higher version-->
        <google.grpc>1.0.1</google.grpc>
        <slf4j.version>1.7.21</slf4j.version>
        <junit.version>4.12</junit.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- This prevents findbugs plugin to check all the dependency locations -->
        <dependency.locations.enabled>false</dependency.locations.enabled>
    </properties>

    <dependencies>
        <!-- Intra-module dependencies -->
        <!--
        <dependency>
            <groupId>org.tobedefined.ntbcvariantbox</groupId>
            <artifactId>ntbcvariantbox-storage-core</artifactId>
            <version>${ntbcvariantbox.version}</version>
        </dependency>
        <dependency>
            <groupId>org.tobedefined.ntbcvariantbox</groupId>
            <artifactId>ntbcvariantbox-storage-mongodb</artifactId>
            <version>${ntbcvariantbox.version}</version>
        </dependency>
        -->
        <!-- OpenCB dependencies -->
        <!--
        <dependency>
            <groupId>org.opencb.opencga</groupId>
            <artifactId>opencga-storage-core</artifactId>
            <version>${opencga.version}</version>
        </dependency>
        -->
        <dependency>
            <groupId>org.opencb.opencga</groupId>
            <artifactId>opencga-storage-mongodb</artifactId>
            <version>${opencga.version}</version>
        </dependency>
        <!--
        <dependency>
            <groupId>org.opencb.biodata</groupId>
            <artifactId>biodata-models</artifactId>
            <version>${biodata.version}</version>
        </dependency>
        -->
        <!-- External dependencies -->
        <!--
        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro</artifactId>
            <version>${avro.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro-ipc</artifactId>
            <version>${avro.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro-mapred</artifactId>
            <version>${avro.version}</version>
            <classifier>hadoop2</classifier>
        </dependency>
        -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.6</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>2.4.3</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>